--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "request": "^2.88.2",
     "sanitize-html": "^2.7.0",
     "typescript": "^4.6.3",
-    "typescript-transpile-only": "0.0.4"
+    "typescript-transpile-only": "0.0.4",
+    "@snyk/protect": "^1.657.0"
   },
   "devDependencies": {
     "@sentry/types": "^6.19.2",
